# nexus

./: .clang-format  .gitignore  .pre-commit-config.yaml  .yamllint.yml  BUILD_SUCCESS_REPORT.md  CMakeLists.txt  CODEOWNERS  CRITICAL_FIXES_APPLIED.md  EVENTLOG_PRODUCTION_READY.md  EVENTLOG_V0.1_COMPLETE.md  EVENTLOG_V0.2_HARDENING.md  FINAL_ASSESSMENT.md  GETTING_STARTED.md  HARDENING_COMPLETE.md  MONDAY_LAUNCH_READY.md  Makefile  OBSERVATORY_EXCELLENCE_COMPLETE.md  ONTOLOGY.md  P1_ENHANCEMENTS_COMPLETE.md  PERFORMANCE_OPTIMIZATION_ROADMAP.md  PHASE0_COMPLETE.md  PRODUCTION_READY.md  README.md  SATURDAY_COMPLETE.md  SATURDAY_PROGRESS_REPORT.md  STATUS.md  SUNDAY_COMPLETE.md  SYNTROPIC_EXCELLENCE_CERTIFIED.md  WEEKEND_UPGRADES_STATUS.md  XTX_GAMEPLAN.md  context.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml  live.yaml  paper.yaml
cpp/eventlog/: CMakeLists.txt
cpp/eventlog/include/nexus/eventlog/: arrow_schema.hpp  metadata.hpp  partitioner.hpp  reader.hpp  schema.hpp  validator.hpp  writer.hpp
cpp/eventlog/src/: arrow_schema.cpp  bindings.cpp  metadata.cpp  partitioner.cpp  reader.cpp  schema.cpp  validator.cpp  writer.cpp
cpp/eventlog/test/: eventlog_test.cpp  golden_dataset.hpp  io_pruning_test.cpp  large_file_test.cpp  partitioner_test.cpp  reader_filter_test.cpp  replay_parity_test.cpp  validation_test.cpp
cpp/ingest/ibkr/: CMakeLists.txt
cpp/ingest/ibkr/include/nexus/ingest/ibkr/: feed_adapter.hpp
cpp/ingest/ibkr/src/: feed_adapter.cpp  main.cpp
cpp/time/: CMakeLists.txt
cpp/time/include/nexus/: time.hpp
cpp/time/src/: time.cpp
cpp/time/test/: time_test.cpp
docs/: OBSERVATORY_METRICS_INTEGRATION.md  VISION.md  architecture.md  eventlog-usage.md  eventlog-v0.2-changelog.md  ontology-quickstart.md  phase0-summary.md
docs/rfcs/: 001-eventlog-schema.md  README.md
docs/runbooks/: ibkr-setup.md
ops/observability_api/: __init__.py  main.py  requirements.txt
ops/tests/: test_api.py
py/nexus/: __init__.py  config.py
py/nexus/ingest/: __init__.py  ibkr_feed.py  venue_timezones.py
py/nexus/ontology/: __init__.py  attributes.py  cache.py  db.py  edges.py  nlp_linker.py  registry.py  ulid_gen.py
py/nexus/ops/: __init__.py  calibrate_linker.py  observability_api.py  ontology_api.py  refresh_edges.py  seed_edges.py  seed_ontology.py  test_observability_api.py
py/tests/: test_config.py  test_ontology_registry.py  test_ontology_ulid.py
scripts/: dev.sh  launch_monday.sh  launch_monday_python.sh  launch_observatory.sh  ontology_cron.sh  setup.sh  setup_ontology.sh  stop.sh  stop_ingestion.sh  stop_ingestion_python.sh  stop_observatory.sh  test.sh  verify_data.cpp
sql/: ontology_schema.sql
ui/observatory/: env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
ui/observatory/src/app/: globals.css  layout.tsx  page.tsx
ui/observatory/src/app/api/alerts/: route.ts
ui/observatory/src/app/api/health/: route.ts
ui/observatory/src/app/api/market/tickers/: route.ts
ui/observatory/src/app/api/metrics/: route.ts
ui/observatory/src/app/api/metrics/range/: route.ts
ui/observatory/src/app/api/metrics/system/: route.ts
ui/observatory/src/app/api/positions/: route.ts
ui/observatory/src/app/api/positions/trades/summary/: route.ts
ui/observatory/src/app/api/storage/stats/: route.ts
ui/observatory/src/app/api/venues/status/: route.ts
ui/observatory/src/app/dashboard/: page.tsx
ui/observatory/src/app/development/: page.tsx
ui/observatory/src/app/ontology/: page.tsx
ui/observatory/src/app/ontology/[syn_id]/: page.tsx
ui/observatory/src/app/ontology/quarantine/: page.tsx
ui/observatory/src/app/positions/: page.tsx
ui/observatory/src/app/pulse/: page.tsx
ui/observatory/src/app/world/: page.tsx
ui/observatory/src/components/: AlertPanel.tsx  AlertsPanel.tsx  Clock.tsx  DataQuality.tsx  HealthStatus.tsx  IngestionMetrics.tsx  LatencyMetrics.tsx  LatencyMonitor.tsx  LiveEventFeed.tsx  LogTail.tsx  MarketTickerBar.tsx  Sidebar.tsx  SymbolTiles.tsx  SystemStatus.tsx  WorldMarketFooter.tsx
ui/observatory/src/contexts/: SidebarContext.tsx  ThemeContext.tsx
ui/observatory/src/hooks/: useEventStream.ts
ui/observatory/src/lib/: metrics.ts  ontology-config.ts  venues.ts
